--- a/website/templates/form.html
+++ b/website/templates/form.html
@@ -1,7 +1,7 @@
-{% extends base.html %}
+{% extends "base.html" %}
 {% block content %}
 
-<form action="" method="POST">
+<form action="/convert" method="POST">
     <h3>Convert</h3>
     <br>
     
@@ -13,10 +13,10 @@
     <br>
     <h3>to...</h3>
     <br>
-    <label for="desired_currency"></label><br>
-    <input type="text" id="desired_currency" name="desired_currency" placeholder="desired currency">
+    <label for="target_currency"></label><br>
+    <input type="text" id="target_currency" name="target_currency" placeholder="desired currency">
 
-    <input type="submit" value="Submit">
+    <input type="submit" value="Convert">
   </form> 
 
 {% endblock %}
