--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Currency Converter</title>
+    <link rel="stylesheet" href="./static/style.css">
 </head>
 <body>
-<h1>currency conversion </h1>
+<h1>Currency Conversion </h1>
 {% block content %}
 {% endblock %}
+<script src="./static/currency_form.js"></script>
 </body>
 </html>
